--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "template_next",
-  "version": "0.1.0",
+  "author": {
+    "name": "Karthik G. Appiah"
+  },
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
