--- a/components.json
+++ b/components.json
@@ -12,7 +12,7 @@
   },
   "aliases": {
     "components": "@/shadcn",
-    "utils": "@/lib/utils",
+    "utils": "@/lib/utils/tailwind",
     "ui": "@/shadcn/ui",
     "lib": "@/lib",
     "hooks": "@/lib/hooks"
